[tool.poetry]
name = "indy-explorer"
version = "0.1.0"
description = "Interactive Explorer of Indy Pass Mountain Resorts"
authors = ["Jon Stelman <jon@jonstelman.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
googlemaps = "^4.10.0"
matplotlib = "^3.10.0"
streamlit = "^1.49.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
black = "^24.10"

[tool.black]
skip-string-normalization = true
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
